[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Léo Stewart <lstewart@axialys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
pycln = "^2.1.5"
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.4.0"

[tool.poetry.scripts]
dev = "python -m uvicorn backend.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


## PYTEST
[tool.pytest.ini_options]
pythonpath = ["backend"]

## BLACK
[tool.black]
#line-length = 120

## PYCLN
[tool.pycln]
all = true

## ISORT
[tool.isort]
profile = "black"
#line_length = 120

## PYLINT
[tool.pylint.main]
extension-pkg-whitelist  =["pydantic"]
#source-roots = "backend"
recursive = "yes"


[tool.pylint.format]
#max-line-length = 120

[tool.pylint.basic]
good-names = ["i","j","k","ex","Run","_","db","id"]